<resources>
    <string name="app_name" translatable="false">PokeArcade</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">LogIn</string>
    <string name="register_text">If not registered, click here</string>
    <string name="signup">SignUp</string>
    <string name="games">Games</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="Wordle" translatable="false">Wordle</string>
    <string name="GuessThePokemon">Guess the Pokemon</string>
    <string name="welcome">Welcome Juan</string>
    <string name="namePokemon1" translatable="false">Pokemon1</string>
    <string name="namePokemon2" translatable="false">Pokemon2</string>
    <string name="namePokemon3" translatable="false">Pokemon3</string>
    <string name="namePokemon4" translatable="false">Pokemon4</string>
    <string name="pokemonQuestion">Who is that pokemon?</string>
    <string name="fragment_wordle_label" translatable="false">Wordle</string>
    <string name="fragment_guesspokemon_label">Guess the Pokemon</string>
    <string name="total_wins">Total wins: %d</string>
    <string name="total_games">Total games: %d</string>
    <string name="username_profile" translatable="false">%1s</string>
    <string name="title_username_settings">Username</string>
    <string name="title_language_settings">Language</string>
    <string name="title_dark_mode_settings">Dark mode</string>
    <string name="InternetErrorMsg">Internet connection is not available</string>
    <string name="welcome_msg">Welcome %1$s!</string>
    <string name="imageDescription">The pokemon image the user has to guess.</string>
    <string name="correctAnswer">CORRECT !!!</string>
    <string name="incorrectAnswer">"INCORRECT "</string>
    <string name="correctMessage">Good Job!</string>
    <string name="incorrectMessage">Ups! This Pokemon is: %1$s !</string>
    <string name="dialogContinue">Again</string>
    <string name="dialogExit">Exit</string>
    <string name="title_difficulty_settings">Game difficulty</string>
    <string name="pokequiz" translatable="false">PokeQuiz</string>
    <string name="question_1">What is Pikachu\'s evolution?</string>
    <string name="question_2">What is the fire starter of the first generation?</string>
    <string name="question_3">What is the water starter of the first generation?</string>
    <string name="question_4">What is the grass starter of the first generation?</string>
    <string name="question_5">What is the name of the region of the first generation?</string>
    <string name="question_6">What is the name of the semi-legendary Dragon/Flying type Pokémon from the first generation?</string>
    <string name="question_7">What is the name of the purple Pokémon that transforms into other Pokémon?</string>
    <string name="question_8">What is the name of the region of the ninth generation?</string>
    <string name="question_9">What is the name of the Grass/Steel type Pokémon introduced on the seventh generation?</string>
    <string name="question_10">What is the name of the Dragon/Electric type legendary Pokémon introduced on the fifth generation?</string>
    <string name="raichu" translatable="false">Raichu</string>
    <string name="charmander" translatable="false">Charmander</string>
    <string name="squirtle" translatable="false">Squirtle</string>
    <string name="bulbasaur" translatable="false">Bulbasaur</string>
    <string name="kanto" translatable="false">Kanto</string>
    <string name="dragonite" translatable="false">Dragonite</string>
    <string name="ditto" translatable="false">Ditto</string>
    <string name="paldea" translatable="false">Paldea</string>
    <string name="kartana" translatable="false">Kartana</string>
    <string name="kekrom" translatable="false">Zekrom</string>
    <string name="answer">Answer</string>
    <string name="submit">Submit</string>
</resources>