<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        android:key="username"
        android:title="@string/title_username_settings"
        app:useSimpleSummaryProvider="true"
        android:hint="username"/>
    <ListPreference
        android:key="language"
        android:title="@string/title_language_settings"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="en"
        android:entries="@array/language_options"
        android:entryValues="@array/language_codes"/>
    <SwitchPreference
        android:key="dark_mode"
        android:title="@string/title_dark_mode_settings"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="false"/>
</PreferenceScreen>